<resources>
    <string name="app_name">chapter6</string>
    <string name="notification_channel_id">notificationChannelId</string>
    <string name="notification_channel_name">notificationChannel</string>
    <string name="notification_channel_description">This is chat notification.</string>

    <string name="hint_input_email">이메일</string>
    <string name="hint_input_password">패스워드</string>

    <string name="label_sign_up">회원가입</string>
    <string name="label_login">로그인</string>
    <string name="label_user">유저</string>
    <string name="label_chat">채팅</string>
    <string name="label_my_page">마이페이지</string>
    <string name="label_nickname">닉네임</string>
    <string name="label_description">상태메시지</string>
    <string name="label_edit">수정하기</string>
    <string name="label_logout">로그아웃</string>
    <string name="label_send">전송</string>
</resources>